# Enderman

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD
.github/workflows/: c-cpp.yml
adapters/http/: http_adapter.cpp  http_adapter.hpp
adapters/json/: json_body.hpp
adapters/modules/json/: json_body.hpp
cmake/: endermanConfig.cmake.in
include/enderman/: body.hpp  constants.hpp  enderman.hpp  request.hpp  response.hpp  types.hpp
includes/: constants.hpp  enderman.hpp
includes/enderman/: body.hpp  constants.hpp  enderman.hpp  middleware.hpp  request.hpp  response.hpp  response_writer.hpp  route_handler.hpp  types.hpp  utils.hpp
modules/json/: CMakeLists.txt  interface.hpp  json.hpp  json_body.hpp
modules/json/cmake/: enderman_jsonConfig.cmake.in
modules/json/include/enderman_json/: json.hpp
modules/json/include/json/: json.hpp
modules/json/includes/: json.hpp
modules/json/includes/json/: json.hpp
modules/json/src/: json.cpp  json_internal.hpp
plugins/json/: CMakeLists.txt  json.hpp  json_body.hpp  json_parser.hpp
plugins/json/include/enderman/json/: json.hpp  json_body.hpp  json_core.hpp  json_parser.hpp
plugins/middleware/include/enderman/middleware/: serve_static.hpp
plugins/middlewares/: CMakeLists.txt
plugins/middlewares/include/enderman/middleware/: cors.hpp  serve_static.hpp
plugins/standard_bodies/: CMakeLists.txt  binary_body.hpp  formdata_body.hpp  standard_bodies.hpp  text_body.hpp
plugins/standard_bodies/include/enderman/standard_bodies/: binary_body.hpp  formdata_body.hpp  standard_bodies.hpp  text_body.hpp
src/: enderman.cpp  middleware.hpp  request.cpp  request_builder.hpp  response.cpp  response_writer.hpp  route_handler.hpp  utils.cpp  utils.hpp
src/http/: http_adapter.cpp  http_adapter.hpp
